--- a/app/src/main/res/layout/list_item_track.xml
+++ b/app/src/main/res/layout/list_item_track.xml
@@ -20,7 +20,8 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:minHeight="?android:attr/listPreferredItemHeight"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:layout_weight="1">
 
         <TextView
             android:layout_width="wrap_content"
