--- a/app/src/main/res/layout/list_item_track.xml
+++ b/app/src/main/res/layout/list_item_track.xml
@@ -21,7 +21,8 @@
         android:orientation="vertical"
         android:minHeight="?android:attr/listPreferredItemHeight"
         android:gravity="center_vertical"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:padding="15dp">
 
         <TextView
             android:layout_width="wrap_content"
