--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -9,9 +9,13 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.justinvarghesejohn.android.spotifystreamer.app.SearchActivity.SearchFragment">
 
+    <EditText
+        android:id = "@+id/search_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <ListView
         android:id="@+id/listview_search"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
 </FrameLayout>
