--- a/app/src/main/res/layout/activity_tracks.xml
+++ b/app/src/main/res/layout/activity_tracks.xml
@@ -1,6 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/tracks_container"
+    android:id="@+id/tracks_detail_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.justinvarghesejohn.android.spotifystreamer.app.TracksActivity"
